# perfum_crm

./: .gitignore  README.md
app/: main.py
app/crud/: inventory_crud.py
app/models/: __init__.py  inventory_model.py
app/routers/: inventory_router.py
app/schemas/: inventory_schema.py
backend/: populate_recipes.py  pyproject.toml  test_sales_system.py
backend/app/: database.py  main.py
backend/app/crud/: __init__.py  inventory_crud.py  sales_crud.py
backend/app/models/: __init__.py  inventory_model.py  sales_model.py
backend/app/routes/: sales_routes.py
backend/app/schemas/: __init__.py  inventory_schema.py  sales_schema.py
backend/scripts/: populate_db.py
frontend/: answers.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: HomePage.jsx  Layout.jsx
frontend/src/components/inventory/: AddAdditivePage.jsx  AddAlcoholPage.jsx  AddBottleForm.jsx  AddHumidifierEssenceForm.jsx  AddHumidifierForm.jsx  AdditiveList.jsx  AlcoholList.jsx  BottleList.jsx  FragranceList.jsx  InventoryDashboard.jsx
frontend/src/components/inventory/Additive/: AddAdditiveForm.jsx  AddAdditivePage.jsx  AdditiveList.jsx
frontend/src/components/inventory/Alcohol/: AddAlcoholForm.jsx  AddAlcoholPage.jsx  AlcoholList.jsx
frontend/src/components/inventory/Bottle/: AddBottleForm.jsx  AddBottlePage.jsx  BottleList.jsx
frontend/src/components/inventory/FinishedProduct/: AddFinishedProductForm.jsx  AddFinishedProductPage.jsx  FinishedProductList.jsx
frontend/src/components/sales/: CustomerForm.jsx  CustomerList.jsx
(+9 files in other folders)
